--- a/src/App.css
+++ b/src/App.css
@@ -36,12 +36,12 @@ body, .app {
   }
 }
 
-.bookshelf-title {
+/*.bookshelf-title {
   border-bottom: 1px solid #dedede;
 }
 .bookshelf-books {
   text-align: center;
-}
+}*/
 
 .open-search {
   position: fixed;
